--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,12 +1,21 @@
-<app-nav-bar></app-nav-bar>
-<div class="container">
-    <div class="row">
-        <div class="col-md-3">
-            <app-left-nav-bar></app-left-nav-bar>
-        </div>
-        <div class="col-md-9">
+<div>
+    <md-toolbar color="primary">
+        <span>Meritz ITSM</span>
+    </md-toolbar>
+    <md-sidenav-container class="full-height">
+        <md-sidenav #sidenav opened="true" mode="side" disableClose class="c-md-sidenav">
+            <md-nav-list>
+                <h3>SR관리</h3>
+                <md-list-item routerLinkActive="active"><a [routerLink]="['/regSrForm']">SR 등록</a></md-list-item>
+                <h3>변경관리</h3>
+                <md-list-item routerLinkActive="active"><a [routerLink]="['/srList']">SR 목록</a></md-list-item>
+                <md-list-item routerLinkActive="active"><a [routerLink]="['/subsrList']">SUBSR 목록</a></md-list-item>
+                <md-list-item routerLinkActive="active"><a [routerLink]="['/']">SR 등록</a></md-list-item>
+            </md-nav-list>
+        </md-sidenav>
+
+        <div class="scrolling-content">
             <router-outlet></router-outlet>
         </div>
-    </div>
+    </md-sidenav-container>
 </div>
-<app-footer></app-footer>
