--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-body {
-    padding-top: 70px;
+html {
+    width: 100%;
+    min-height: 100vh;
 }
