--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,3 @@
-<div class="container-fluid bg-4 text-center">
-    <hr>
-    <footer>
-        <div class="row">
-            <div class="col-lg-12">
-                <p>Copytignt &copy; Letsbe 2017</p>
-            </div>
-        </div>
-    </footer>
-</div>
+<nav class="navbar fixed-bottom navbar-light bg-light">
+    <p class="text-justify" href="#">Copyright(c) 2017 All Rights Reserved</p>
+</nav>
