--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
-html {
-    width: 100%;
-    min-height: 100vh;
+body {
+    padding-top: 70px;
 }
